Api packaging
* initial API package
* api for folder service
* add api for value service
* add api for nodegroup and node services
* add api for work service
* add generated documentation